--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <pre id="output"></pre>
         <pre id="progress"></pre>
         <pre id="cursor">_</pre>
-    </div>
-    <div id="lamp-container">
-        <img id="lamp" src="lamp.png" alt="Lamp">
+        <pre id="large-text" class="hidden large-text"></pre>
     </div>
     <script src="script.js"></script>
 </body>
